@@ -9,7 +9,7 @@
     <!--[if IE]>
         <script src="http://htmlshiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link type="text/css" rel="stylesheet" href="style.css" />
+    <link type="text/css" rel="stylesheet" href="style-cwi.css" />
     <script type="text/javascript" src="behavior.js"></script>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
