@@ -1,0 +1,28 @@
+@import "style.less";
+
+/* Reposition Live Search Box */
+.LSBox {
+  position: relative;
+}
+#LSResult {
+  z-index: 100;
+  margin: inherit;
+}
+
+/* Resize embedded PDF viewer */
+object.viewembededfile {
+  height: 1200px;
+  width: 100%;
+}
+
+/* Align footer images */
+#footer-info img {
+    vertical-align: baseline;
+}
+
+/* Obviate webcouturier.dropdownmenu */
+div#btnav * .submenu {
+  display: none;
+}
+
+/* finis */
