@@ -601,26 +601,3 @@ footer p {
 		padding-right: 2em;
 	}
 }
-
-/* Reposition Live Search Box */
-.LSBox{
-    position: relative;
-}
-
-#LSResult {
-    z-index: 100;
-    margin: inherit;
-}
-
-/* Obviate webcouturier.dropdownmenu */
-div#btnav * .submenu {
-    display: none;
-}
-
-/* Resize embedded PDF viewer */
-object.viewembededfile {
-    height:1200px;
-    width: 100%;
-}
-
-/* finis */
